Massive overhaul of internal data storage
- Pokemon and Moves are now headed by an Enum
- Data has been reacquired from PokeAPI
- Started work on transitioning to Slash Commands
- Added a completely new system of handling images
- Added many missing Pokemon Forms, as well as images for certain Pokemon forms/characteristics
- Removed TRs, began to transition TMs to Scarlet & Violet series TMs