@@ -3,13 +3,15 @@ package com.calculusmaster.pokecord.game.enums.items;
 import com.calculusmaster.pokecord.game.enums.elements.Category;
 import com.calculusmaster.pokecord.game.enums.elements.Type;
 import com.calculusmaster.pokecord.game.moves.Move;
+import com.calculusmaster.pokecord.game.moves.data.MoveEntity;
+import com.calculusmaster.pokecord.game.pokemon.data.PokemonEntity;
 import com.calculusmaster.pokecord.util.interfaces.ZCrystalValidator;
 import org.jooq.lambda.Seq;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+
+import static com.calculusmaster.pokecord.game.moves.data.MoveEntity.*;
+import static com.calculusmaster.pokecord.game.pokemon.data.PokemonEntity.*;
 
 public enum ZCrystal
 {
@@ -31,45 +33,45 @@ public enum ZCrystal
     ROCKIUM_Z(Type.ROCK),
     STEELIUM_Z(Type.STEEL),
     WATERIUM_Z(Type.WATER),
-    ALORAICHIUM_Z("Alolan Raichu", "Thunderbolt"),
-    DECIDIUM_Z("Decidueye", "Spirit Shackle"),
-    EEVIUM_Z("Eevee", "Last Resort"),
-    INCINIUM_Z("Incineroar", "Darkest Lariat"),
-    KOMMOIUM_Z("Kommo O", "Clanging Scales"),
-    LUNALIUM_Z((p, m) -> (p.equals("Lunala") || p.equals("Dawn Wings Necrozma")) && m.getName().equals("Moongeist Beam")),
-    LYCANIUM_Z("Lycanroc", "Stone Edge"),
-    MARSHADIUM_Z("Marshadow", "Spectral Thief"),
-    MEWNIUM_Z("Mew", "Psychic"),
-    MIMIKIUM_Z("Mimikyu", "Play Rough"),
-    PIKANIUM_Z("Pikachu", "Volt Tackle"),
-    PIKASHUNIUM_Z("Pikachu", "Thunderbolt"),
-    PRIMARIUM_Z("Primarina", "Sparkling Aria"),
-    SNORLIUM_Z("Snorlax", "Giga Impact"),
-    SOLGANIUM_Z((p, m) -> (p.equals("Solgaleo") || p.equals("Dusk Mane Necrozma")) && m.getName().equals("Sunsteel Strike")),
-    TAPUNIUM_Z("Tapu", "Natures Madness"),
-    ULTRANECROZIUM_Z("Ultra Necrozma", "Photon Geyser", "Prismatic Laser"),
+    ALORAICHIUM_Z(RAICHU_ALOLA, THUNDERBOLT),
+    DECIDIUM_Z(DECIDUEYE, SPIRIT_SHACKLE),
+    EEVIUM_Z(EEVEE, LAST_RESORT),
+    INCINIUM_Z(INCINEROAR, DARKEST_LARIAT),
+    KOMMOIUM_Z(KOMMO_O, CLANGING_SCALES),
+    LUNALIUM_Z(EnumSet.of(LUNALA, NECROZMA_DAWN_WINGS), MOONGEIST_BEAM),
+    LYCANIUM_Z(EnumSet.of(LYCANROC_DUSK, LYCANROC_MIDDAY, LYCANROC_MIDNIGHT), STONE_EDGE),
+    MARSHADIUM_Z(MARSHADOW, SPECTRAL_THIEF),
+    MEWNIUM_Z(MEW, PSYCHIC),
+    MIMIKIUM_Z(MIMIKYU, PLAY_ROUGH),
+    PIKANIUM_Z(PIKACHU, VOLT_TACKLE),
+    PIKASHUNIUM_Z(PIKACHU, THUNDERBOLT),
+    PRIMARIUM_Z(PRIMARINA, SPARKLING_ARIA),
+    SNORLIUM_Z(SNORLAX, GIGA_IMPACT),
+    SOLGANIUM_Z(EnumSet.of(SOLGALEO, NECROZMA_DUSK_MANE), SUNSTEEL_STRIKE),
+    TAPUNIUM_Z(EnumSet.of(TAPU_LELE, TAPU_BULU, TAPU_FINI, TAPU_KOKO), NATURES_MADNESS),
+    ULTRANECROZIUM_Z(NECROZMA_ULTRA, PHOTON_GEYSER, PRISMATIC_LASER),
     //Custom Z-Crystals
-    RESHIRIUM_Z("Reshiram", "Blue Flare"),
-    ZEKRIUM_Z("Zekrom", "Bolt Strike"),
-    KYURIUM_Z((p, m) -> (p.equals("Kyurem") && m.getName().equals("Glaciate")) || (p.equals("Black Kyurem") && m.getName().equals("Freeze Shock")) || (p.equals("White Kyurem") && m.getName().equals("Ice Burn"))),
-    XERNIUM_Z("Xerneas", "Geomancy"),
-    YVELTIUM_Z("Yveltal", "Oblivion Wing"),
-    DIANCIUM_Z("Diancie", "Diamond Storm"),
-    ARCEIUM_Z("Arceus", "Judgement"),
-    RAYQUAZIUM_Z("Rayquaza", "Dragon Ascent"),
-    ZYGARDIUM_Z("Zygarde", "Lands Wrath", "Core Enforcer", "Thousand Arrows", "Thousand Waves"),
-    VOLCANIUM_Z("Volcanion", "Steam Eruption"),
-    KYOGRIUM_Z("Kyogre", "Origin Pulse"),
-    GROUDONIUM_Z("Groudon", "Precipice Blades"),
-    GENESECTIUM_Z("Genesect", "Techno Blast"),
-    MELMETALIUM_Z("Melmetal", "Double Iron Bash", "Acid Armor"),
-    DIALGIUM_Z("Dialga", "Roar Of Time"),
-    PALKIUM_Z("Palkia", "Spacial Rend"),
-    GIRATINIUM_Z("Giratina", "Shadow Force"),
-    ETERNIUM_Z("Eternatus", "Eternabeam", "Dynamax Cannon"),
-    DARKRAIUM_Z("Darkrai", "Dark Void");
+    RESHIRIUM_Z(RESHIRAM, BLUE_FLARE),
+    ZEKRIUM_Z(ZEKROM, BOLT_STRIKE),
+    KYURIUM_Z((p, m) -> (p == KYUREM && m.is(GLACIATE)) || (p == KYUREM_BLACK && m.is(FREEZE_SHOCK)) || (p == KYUREM_WHITE && m.is(ICE_BURN))),
+    XERNIUM_Z(XERNEAS, GEOMANCY),
+    YVELTIUM_Z(YVELTAL, OBLIVION_WING),
+    DIANCIUM_Z(DIANCIE, DIAMOND_STORM),
+    ARCEIUM_Z(ARCEUS, JUDGMENT),
+    RAYQUAZIUM_Z(EnumSet.of(RAYQUAZA, RAYQUAZA_MEGA), DRAGON_ASCENT),
+    ZYGARDIUM_Z(EnumSet.of(ZYGARDE_10, ZYGARDE_50, ZYGARDE_COMPLETE), LANDS_WRATH, CORE_ENFORCER, THOUSAND_WAVES, THOUSAND_ARROWS),
+    VOLCANIUM_Z(VOLCANION, STEAM_ERUPTION),
+    KYOGRIUM_Z(EnumSet.of(KYOGRE, KYOGRE_PRIMAL), ORIGIN_PULSE),
+    GROUDONIUM_Z(EnumSet.of(GROUDON, GROUDON_PRIMAL), PRECIPICE_BLADES),
+    GENESECTIUM_Z(GENESECT, TECHNO_BLAST),
+    MELMETALIUM_Z(MELMETAL, DOUBLE_IRON_BASH, ACID_ARMOR),
+    DIALGIUM_Z(EnumSet.of(DIALGA, DIALGA_ORIGIN), ROAR_OF_TIME),
+    PALKIUM_Z(EnumSet.of(PALKIA, PALKIA_ORIGIN), SPACIAL_REND),
+    GIRATINIUM_Z(EnumSet.of(GIRATINA_ALTERED, GIRATINA_ORIGIN), SHADOW_FORCE),
+    ETERNIUM_Z(EnumSet.of(ETERNATUS, ETERNATUS_ETERNAMAX), ETERNABEAM, DYNAMAX_CANNON),
+    DARKRAIUM_Z(DARKRAI, DARK_VOID);
 
-    private ZCrystalValidator rule;
+    private final ZCrystalValidator rule;
     private Type type;
 
     ZCrystal(ZCrystalValidator rule)
@@ -80,18 +82,23 @@ public enum ZCrystal
 
     ZCrystal(Type t)
     {
-        this((p, m) -> m.getType().equals(t));
+        this((p, m) -> m.is(t));
         this.type = t;
     }
 
-    ZCrystal(String pokemonName, String... moveNames)
+    ZCrystal(PokemonEntity pokemonEntity, MoveEntity... moveEntities)
     {
-        this((p, m) -> p.contains(pokemonName) && Arrays.asList(moveNames).contains(m.getName()));
+        this((p, m) -> p == pokemonEntity && List.of(moveEntities).contains(m.getEntity()));
     }
 
-    public boolean check(String pokemonName, Move move)
+    ZCrystal(EnumSet<PokemonEntity> pokemonEntities, MoveEntity... moveEntities)
     {
-        return this.rule.check(pokemonName, move);
+        this((p, m) -> pokemonEntities.contains(p) && List.of(moveEntities).contains(m.getEntity()));
+    }
+
+    public boolean check(PokemonEntity pokemonEntity, Move move)
+    {
+        return this.rule.check(pokemonEntity, move);
     }
 
     public Type getType()
@@ -116,20 +123,18 @@ public enum ZCrystal
         return null;
     }
     
-    public static boolean isValid(ZCrystal z, Move move, String pokemonName)
+    public static boolean isValid(ZCrystal z, Move move, PokemonEntity pokemonEntity)
     {
-        Map<ZCrystal, List<String>> statusOverride = new HashMap<>();
-        statusOverride.put(ZCrystal.XERNIUM_Z, List.of("Geomancy"));
-        statusOverride.put(ZCrystal.DARKRAIUM_Z, List.of("Dark Void"));
-        statusOverride.put(ZCrystal.MELMETALIUM_Z, List.of("Acid Armor"));
+        Map<ZCrystal, EnumSet<MoveEntity>> statusOverride = new HashMap<>();
+        statusOverride.put(ZCrystal.XERNIUM_Z, EnumSet.of(GEOMANCY));
+        statusOverride.put(ZCrystal.DARKRAIUM_Z, EnumSet.of(DARK_VOID));
+        statusOverride.put(ZCrystal.MELMETALIUM_Z, EnumSet.of(ACID_ARMOR));
 
         if(move.getCategory().equals(Category.STATUS))
-        {
-            if(!statusOverride.containsKey(z) || !statusOverride.get(z).contains(move.getName()))
+            if(!statusOverride.containsKey(z) || !statusOverride.get(z).contains(move.getEntity()))
                 return false;
-        }
 
-        return z.check(pokemonName, move);
+        return z.check(pokemonEntity, move);
     }
 
     public static ZCrystal getRandomUniqueZCrystal()
